Fixed issues on smaller devices
Added media queries to fix issues with smaller devices

--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   background-image: radial-gradient(circle at top, #45C2FF 0%, #218FFF 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;
   font-family: 'open sans', 'asap', 'lato', sans-serif, 'Helvetica', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
