--- a/src/styles/components/gift.scss
+++ b/src/styles/components/gift.scss
@@ -54,4 +54,10 @@
     height: 100%;
     width: 100%;
   }
+
+  @media only screen and (max-width: 340px) {
+    .description {
+      font-size: 1.5rem;
+    }
+  }
 }
