--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -34,7 +34,7 @@
     margin-bottom: 1rem;
 
     img {
-      width: 75%;
+      width: 60%;
     }
   }
 
@@ -45,6 +45,7 @@
 
   .price-summary {
     margin-bottom: 0.5rem;
+    font-weight: 600;
 
     .row {
       display: flex;
@@ -56,7 +57,7 @@
     margin-bottom: 1.5rem;
     text-align: end;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   .error {
@@ -64,5 +65,45 @@
     color: red;
     font-weight: 500;
     font-size: 1.1rem;
+  }
+
+  @media only screen and (max-width: 340px) {
+    .title-container {
+      position: relative;
+      font-size: 1.5rem;
+  
+      .back-button {
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-weight: 600;
+      }
+  
+      .title {
+        text-align: center;
+        margin-bottom: .8rem;
+  
+        div {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+
+    .description {
+      font-size: 1rem;
+      text-align: center;
+    }
+
+    .price-summary {
+      margin-bottom: 0.5rem;
+      font-size: .8rem;
+      font-weight: 600;
+  
+      .row {
+        display: flex;
+        margin-bottom: 0.5rem;
+      }
+    }
+
   }
 }
